// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`impact-state-indicator Renders \`impact-state-indicator\` with custom props correctly 1`] = `
<div
  class="impact-state-indicator"
>
  <span
    class="impact-state-text white--text"
  >
    8
  </span>
  <div
    class="pointer-wrapper"
  >
    <div
      class="pointer"
      style="left: 4px;"
    />
    <div
      class="section-wrapper"
    >
      <div
        class="section"
        style="background-color: rgb(47, 171, 99);"
      />
      <div
        class="section"
        style="background-color: rgb(124, 179, 66);"
      />
      <div
        class="section"
        style="background-color: rgb(205, 220, 57);"
      />
      <div
        class="section"
        style="background-color: rgb(220, 231, 117);"
      />
      <div
        class="section"
        style="background-color: rgb(255, 245, 157);"
      />
      <div
        class="section"
        style="background-color: rgb(255, 241, 118);"
      />
      <div
        class="section"
        style="background-color: rgb(255, 235, 59);"
      />
      <div
        class="section"
        style="background-color: rgb(253, 216, 53);"
      />
      <div
        class="section"
        style="background-color: rgb(251, 192, 45);"
      />
      <div
        class="section"
        style="background-color: rgb(255, 179, 0);"
      />
      <div
        class="section"
        style="background-color: rgb(249, 168, 37);"
      />
      <div
        class="section"
        style="background-color: rgb(255, 143, 0);"
      />
      <div
        class="section"
        style="background-color: rgb(245, 124, 0);"
      />
      <div
        class="section"
        style="background-color: rgb(255, 111, 0);"
      />
      <div
        class="section"
        style="background-color: rgb(239, 108, 0);"
      />
      <div
        class="section"
        style="background-color: rgb(255, 106, 60);"
      />
      <div
        class="section"
        style="background-color: rgb(255, 87, 34);"
      />
      <div
        class="section"
        style="background-color: rgb(244, 81, 30);"
      />
      <div
        class="section"
        style="background-color: rgb(249, 76, 22);"
      />
      <div
        class="section"
        style="background-color: rgb(244, 67, 54);"
      />
      <div
        class="section"
        style="background-color: rgb(230, 74, 25);"
      />
      <div
        class="section"
        style="background-color: rgb(216, 67, 21);"
      />
      <div
        class="section"
        style="background-color: rgb(229, 57, 53);"
      />
      <div
        class="section"
        style="background-color: rgb(211, 47, 47);"
      />
      <div
        class="section"
        style="background-color: rgb(198, 40, 40);"
      />
      <div
        class="section"
        style="background-color: rgb(191, 54, 12);"
      />
      <div
        class="section"
        style="background-color: rgb(183, 28, 28);"
      />
      <div
        class="section"
        style="background-color: rgb(197, 17, 98);"
      />
      <div
        class="section"
        style="background-color: rgb(194, 24, 91);"
      />
      <div
        class="section"
        style="background-color: rgb(173, 20, 87);"
      />
      <div
        class="section"
        style="background-color: rgb(136, 14, 79);"
      />
    </div>
  </div>
</div>
`;

exports[`impact-state-indicator Renders \`impact-state-indicator\` with default props correctly 1`] = `
<div
  class="impact-state-indicator"
>
  <span
    class="impact-state-text white--text"
  >
    0
  </span>
  <div
    class="pointer-wrapper"
  >
    <div
      class="pointer"
      style="left: -4px;"
    />
    <div
      class="section-wrapper"
    >
      <div
        class="section"
        style="background-color: rgb(47, 171, 99);"
      />
      <div
        class="section"
        style="background-color: rgb(124, 179, 66);"
      />
      <div
        class="section"
        style="background-color: rgb(205, 220, 57);"
      />
      <div
        class="section"
        style="background-color: rgb(220, 231, 117);"
      />
      <div
        class="section"
        style="background-color: rgb(255, 245, 157);"
      />
      <div
        class="section"
        style="background-color: rgb(255, 241, 118);"
      />
      <div
        class="section"
        style="background-color: rgb(255, 235, 59);"
      />
      <div
        class="section"
        style="background-color: rgb(253, 216, 53);"
      />
      <div
        class="section"
        style="background-color: rgb(251, 192, 45);"
      />
      <div
        class="section"
        style="background-color: rgb(255, 179, 0);"
      />
      <div
        class="section"
        style="background-color: rgb(249, 168, 37);"
      />
      <div
        class="section"
        style="background-color: rgb(255, 143, 0);"
      />
      <div
        class="section"
        style="background-color: rgb(245, 124, 0);"
      />
      <div
        class="section"
        style="background-color: rgb(255, 111, 0);"
      />
      <div
        class="section"
        style="background-color: rgb(239, 108, 0);"
      />
      <div
        class="section"
        style="background-color: rgb(255, 106, 60);"
      />
      <div
        class="section"
        style="background-color: rgb(255, 87, 34);"
      />
      <div
        class="section"
        style="background-color: rgb(244, 81, 30);"
      />
      <div
        class="section"
        style="background-color: rgb(249, 76, 22);"
      />
      <div
        class="section"
        style="background-color: rgb(244, 67, 54);"
      />
      <div
        class="section"
        style="background-color: rgb(230, 74, 25);"
      />
      <div
        class="section"
        style="background-color: rgb(216, 67, 21);"
      />
      <div
        class="section"
        style="background-color: rgb(229, 57, 53);"
      />
      <div
        class="section"
        style="background-color: rgb(211, 47, 47);"
      />
      <div
        class="section"
        style="background-color: rgb(198, 40, 40);"
      />
      <div
        class="section"
        style="background-color: rgb(191, 54, 12);"
      />
      <div
        class="section"
        style="background-color: rgb(183, 28, 28);"
      />
      <div
        class="section"
        style="background-color: rgb(197, 17, 98);"
      />
      <div
        class="section"
        style="background-color: rgb(194, 24, 91);"
      />
      <div
        class="section"
        style="background-color: rgb(173, 20, 87);"
      />
      <div
        class="section"
        style="background-color: rgb(136, 14, 79);"
      />
    </div>
  </div>
</div>
`;
